extensions/bt-system-bundle/src/endpoints/excel-importer/services/__tests__/fixtures/invalid-files/encrypted-placeholder.xlsx
ENCRYPTED_WORKBOOK_PLACEHOLDER
